# ppt-creator

./: main.py  pyproject.toml  xebia_data_services.pptx
src/ppt_creator/: __init__.py  generator.py  suggestor.py
